@@ -61,10 +61,11 @@ module Devise
       # However, you should not overwrite this method, you should overwrite active_for_authentication?
       # and inactive_message instead.
       def valid_for_authentication?
-        if active_for_authentication?
-          block_given? ? yield : true
+        authenticated = block_given? ? yield : true
+        if authenticated
+          active_for_authentication? || inactive_message
         else
-          inactive_message
+          authenticated
         end
       end
 
@@ -156,7 +157,7 @@ module Devise
             conditions[k] = v.to_s if auth_param_requires_string_conversion?(v)
           end if conditions.is_a?(Hash)
         end
-        
+
         # Determine which values should be transformed to string or passed as-is to the query builder underneath
         def auth_param_requires_string_conversion?(value)
           true unless value.is_a?(TrueClass) || value.is_a?(FalseClass) || value.is_a?(Fixnum)
