@@ -7,6 +7,7 @@
   * Allow idempotent API requests
   * Fix bug where logs did not show 401 as status code
   * Change paranoid settings to behave as success instead of as failure
+  * Fix bug where activation messages were shown first than the credentials error message
 
 * deprecation
   * redirect_location is deprecated, please use after_sign_in_path_for
